2026-02-10  Dirk Eddelbuettel  <edd@debian.org>

	* src/xptr.cpp (adjust_cpp, advanceUnits_cpp): Support optional calendar
	* man/adjust.Rd: Updated
	* man/advanceUnits.Rd: Idem
	* R/dates.R: Idem
	* src/RcppExports.cpp: Regenerated
	* R/RcppExports.R: Idem
	* inst/include/qlcal_RcppExports.h: Idem

2026-02-09  Dirk Eddelbuettel  <edd@debian.org>

	* src/xptr.cpp (getEndOfMonth): Support optional calendar
	* man/getEndOfMonth.Rd: Updated
	* src/RcppExports.cpp: Regenerated
	* R/RcppExports.R: Idem
	* inst/include/qlcal_RcppExports.h: Idem

2026-02-08  Dirk Eddelbuettel  <edd@debian.org>

	* src/xptr.cpp (getCalendar): Simplify removing a helper function,
	cross-reference `setCalendar`, update example
	* src/dates.cpp (setCalendar): Reference `getCalendar`, update docs
	* man/getCalendar.Rd: Updated
	* man/setCalendar.Rd: Idem
	* src/dates.cpp (isEndOfMonth): Support optional dates and calendar
	* src/dates.cpp (advanceDate): Support optional calendar
	* src/RcppExports.cpp: Regenerated
	* R/RcppExports.R: Idem
	* inst/include/qlcal_RcppExports.h: Idem
	* man/advanceDate.Rd: Updated documentation
	* man/isEndOfMonth.Rd: Idem

2026-02-07  Dirk Eddelbuettel  <edd@debian.org>

	* src/dates.cpp (isHoliday,isWeekend): Extend generalization
	(createDatevector,getCalendarInstance): Factor out helper functions
	* src/RcppExports.cpp: Regenerated
	* R/RcppExports.R: Idem
	* inst/include/qlcal_RcppExports.h: Idem
	* man/isHoliday.Rd: Updated documentation

2026-02-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/xptr.cpp (getCalendar): Renamed from getXPtr, added
	documentation
	* man/getCalendar.Rd: New documentation
	* man/getName.Rd: Updated documentation
	* man/isBusinessDay.Rd: Idem
	* src/dates.cpp (isBusinessDay): Generalized making date vector
	optional using current date, also allow calendar external pointer
	* src/RcppExports.cpp: Regenerated
	* R/RcppExports.R: Idem
	* inst/include/qlcal_RcppExports.h: Idem
	* src/Makevars.win: Add xptr.cpp
