@@ -1,3 +1,11 @@
+2026-02-11  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/dates.cpp (businessDaysBetween): : Support optional calendar
+	* man/businessDaysBetween.Rd: Updated
+	* src/RcppExports.cpp: Idem
+	* R/RcppExports.R: Idem
+	* inst/include/qlcal_RcppExports.h: Idem
+
 2026-02-10  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/xptr.cpp (adjust_cpp, advanceUnits_cpp): Support optional calendar
